@@ -2,11 +2,11 @@ name    = WWW-Postmark
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
-copyright_year   = 2010
+copyright_year   = 2015
 
 [@IDOPEREL]
 
 [Prereqs / RuntimeRecommends]
-JSON::XS = 2.3
-IO::Socket::SSL = 1.42
-Net::SSLeay = 1.49
+Cpanel::JSON::XS = 3.0115
+IO::Socket::SSL = 2.012
+Net::SSLeay = 1.68
