@@ -1,6 +1,8 @@
 Revision history for WWW-Postmark
 
 {{$NEXT}}
+	- Added support for file attachments
+	- Replaced JSON with JSON::MaybeXS
 
 0.7       2014-06-28 21:51:17+03:00 Asia/Jerusalem
 	- Not using the "switch" feature anymore.
